--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -1,5 +1,4 @@
-
-name: Testes Automatizados CI
+name: Playwright Tests
 
 on:
   push:
@@ -9,33 +8,30 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: Setup Java 17
-        uses: actions/setup-java@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          node-version: '18'
 
-      - name: Cache do repositório local do Maven
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+      - name: Instalar dependências
+        run: npm install
 
-      - name: Build e execução dos testes
-        run: mvn clean test
+      - name: Instalar Playwright browsers
+        run: npx playwright install --with-deps
 
-      - name: Upload dos relatórios do Cucumber
+      - name: Executar testes
+        run: npx playwright test
+
+      - name: Upload dos relatórios
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: relatorios-cucumber
-          path: target/cucumber-reports/
+          name: playwright-report
+          path: playwright-report/
